<resources>
    <string name="app_name">理财小管家</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="tip1">请输入密码:</string>
    <string name="tip2">请输入密码</string>
    <string name="tip3">please input custom type</string>
    <string name="login">登录</string>
    <string name="close">取消</string>
    <string name="title_activity_login">Login</string>

    <string name="money">金 额: </string>
    <string name="time">时 间: </string>
    <string name="type">类 别: </string>
    <string name="handler">付款方: </string>
    <string name="mark">备 注: </string>
    <string name="address">地 点: </string>
    <string name="save">保 存</string>
    <string name="reset">重 置</string>
    <string name="title_activity_accountflag">Accountflag</string>
    <string name="clearConfirmation_title">删除</string>
    <string name="clearConfirmation">你确定要删除选中项吗？</string>
    <string name="clearProgress_title">删除中。。。</string>
</resources>
