<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@drawable/background1"
    >

    <RelativeLayout
        android:background="#ffff1d2e"
        android:layout_width="fill_parent"
        android:layout_height="50dp">
            <ImageButton
                android:id="@+id/imInBack"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@drawable/back_button_selector"
                android:layout_width="43dp"
                android:layout_height="43dp"/>
            <TextView
                android:layout_toRightOf="@id/imInBack"
                android:layout_marginLeft="4dp"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="新增收入"
                />
        </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        >
        <RelativeLayout android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:padding="20dp"
            >
            <TextView android:layout_width="90dp"
                      android:id="@+id/tvInMoney"
                      android:textSize="20sp"
                      android:text="@string/money"
                      android:layout_height="wrap_content"
                      android:layout_alignBaseline="@+id/txtInMoney"
                      android:layout_alignBottom="@+id/txtInMoney"
                      android:layout_alignParentLeft="true"
                      android:layout_marginLeft="16dp">
            </TextView>
            <EditText
                android:id="@+id/txtInMoney"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tvInMoney"
                android:inputType="number"
                android:numeric="integer"
                android:maxLength="9"
                android:hint="0.00"
                />
            <TextView android:layout_width="90dp"
                      android:id="@+id/tvInTime"
                      android:textSize="20sp"
                      android:text="@string/time"
                      android:layout_height="wrap_content"
                      android:layout_alignBaseline="@+id/txtInTime"
                      android:layout_alignBottom="@+id/txtInTime"
                      android:layout_toLeftOf="@id/txtInMoney">
            </TextView>
            <EditText
                android:id="@+id/txtInTime"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tvInTime"
                android:layout_below="@id/txtInMoney"
                android:inputType="datetime"
                android:hint="2015-05-06"
                android:layout_marginTop="20dp"
                />
            <TextView android:layout_width="90dp"
                      android:id="@+id/tvInType"
                      android:textSize="20sp"
                      android:text="@string/type"
                      android:layout_height="wrap_content"
                      android:layout_alignBaseline="@+id/spInType"
                      android:layout_alignBottom="@+id/spInType"
                      android:layout_alignLeft="@+id/tvInTime">
            </TextView>
            <Spinner android:id="@+id/spInType"
                     android:layout_width="210dp"
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@id/tvInType"
                     android:layout_below="@id/txtInTime"
                     android:layout_marginTop="20dp"
                />

            <TextView android:layout_width="90dp"
                      android:id="@+id/tvInHandler"
                      android:textSize="20sp"
                      android:text="@string/handler"
                      android:layout_height="wrap_content"
                      android:layout_alignBaseline="@+id/txtInHandler"
                      android:layout_alignBottom="@+id/txtInHandler"
                      android:layout_toLeftOf="@+id/spInType"
                >
            </TextView>
            <EditText
                android:id="@+id/txtInHandler"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tvInHandler"
                android:layout_below="@id/spInType"
                android:singleLine="false"
                android:layout_marginTop="20dp"
                />
            <TextView android:layout_width="90dp"
                      android:id="@+id/tvInMark"
                      android:textSize="20sp"
                      android:text="@string/mark"
                      android:layout_height="wrap_content"
                      android:layout_alignTop="@+id/txtInMark"
                      android:layout_toLeftOf="@+id/txtInHandler">
            </TextView>
            <EditText
                android:id="@+id/txtInMark"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tvInMark"
                android:layout_below="@id/txtInHandler"
                android:gravity="top"
                android:singleLine="false"
                android:layout_marginTop="20dp"
                />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:background="@drawable/background"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <ImageButton
                android:id="@+id/imbInSave"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:drawable/ic_menu_save"
                android:layout_centerHorizontal="true"
                />
            <TextView
                android:id="@+id/tvInSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="保存"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/imbInSave"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <ImageButton
                android:id="@+id/imbInReset"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:drawable/ic_menu_revert"
                android:layout_centerHorizontal="true"
                />
            <TextView
                android:id="@+id/tvInReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="重置"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/imbInReset"
                />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
