<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@drawable/background1"
              >
    <RelativeLayout
        android:background="#ffff1d2e"
        android:layout_width="fill_parent"
        android:layout_height="50dp">
        <ImageButton
            android:id="@+id/imOutBack"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/back_button_selector"
            android:layout_width="43dp"
            android:layout_height="43dp"/>
        <TextView
            android:layout_toRightOf="@id/imOutBack"
            android:layout_marginLeft="4dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="新增支出"
            />
    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        >
        <RelativeLayout android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:padding="20dp"
            >
            <TextView android:layout_width="90dp"
                      android:id="@+id/tvOutMoney"
                      android:textSize="20sp"
                      android:text="@string/money"
                      android:layout_height="wrap_content"
                      android:layout_alignBaseline="@+id/txtOutMoney"
                      android:layout_alignBottom="@+id/txtOutMoney"
                      android:layout_alignParentLeft="true"
                      android:layout_marginLeft="16dp">
            </TextView>
            <EditText
                android:id="@+id/txtOutMoney"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tvOutMoney"
                android:inputType="number"
                android:numeric="integer"
                android:maxLength="9"
                android:hint="0.00"
                />
            <TextView android:layout_width="90dp"
                      android:id="@+id/tvOutTime"
                      android:textSize="20sp"
                      android:text="@string/time"
                      android:layout_height="wrap_content"
                      android:layout_alignBaseline="@+id/txtOutTime"
                      android:layout_alignBottom="@+id/txtOutTime"
                      android:layout_toLeftOf="@+id/txtOutMoney">
            </TextView>
            <EditText
                android:id="@+id/txtOutTime"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tvOutTime"
                android:layout_below="@id/txtOutMoney"
                android:inputType="datetime"
                android:hint="2015-05-06"
                android:layout_marginTop="20dp"
                />
            <TextView android:layout_width="90dp"
                      android:id="@+id/tvOutType"
                      android:textSize="20sp"
                      android:text="@string/type"
                      android:layout_height="wrap_content"
                      android:layout_alignBaseline="@+id/spOutType"
                      android:layout_alignBottom="@+id/spOutType"
                      android:layout_alignLeft="@+id/tvOutTime">
            </TextView>
            <Spinner android:id="@+id/spOutType"
                     android:layout_width="210dp"
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@id/tvOutType"
                     android:layout_below="@id/txtOutTime"
                     android:layout_marginTop="20dp"
                />

            <TextView android:layout_width="90dp"
                      android:id="@+id/tvOutAddress"
                      android:textSize="20sp"
                      android:text="@string/address"
                      android:layout_height="wrap_content"
                      android:layout_alignBaseline="@+id/txtOutAddress"
                      android:layout_alignBottom="@+id/txtOutAddress"
                      android:layout_toLeftOf="@+id/spOutType">
            </TextView>
            <EditText
                android:id="@+id/txtOutAddress"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tvOutAddress"
                android:layout_below="@id/spOutType"
                android:singleLine="false"
                android:layout_marginTop="20dp"
                />
            <TextView android:layout_width="90dp"
                      android:id="@+id/tvOutMark"
                      android:textSize="20sp"
                      android:text="@string/mark"
                      android:layout_height="wrap_content"
                      android:layout_alignTop="@+id/txtOutMark"
                      android:layout_toLeftOf="@+id/txtOutAddress">
            </TextView>
            <EditText
                android:id="@+id/txtOutMark"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tvOutMark"
                android:layout_below="@id/txtOutAddress"
                android:gravity="top"
                android:singleLine="false"
                android:layout_marginTop="20dp"
                />
        </RelativeLayout>
    </LinearLayout>
        <LinearLayout
            android:background="@drawable/background"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <ImageButton
                    android:id="@+id/imbOutSave"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@android:drawable/ic_menu_save"
                    android:layout_centerHorizontal="true"
                    />
                <TextView
                    android:id="@+id/tvOutSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="保存"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/imbOutSave"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <ImageButton
                    android:id="@+id/imbOutReset"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@android:drawable/ic_menu_revert"
                    android:layout_centerHorizontal="true"
                    />
                <TextView
                    android:id="@+id/tvOutReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="重置"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/imbOutReset"
                    />
            </RelativeLayout>
    </LinearLayout>
</LinearLayout>
